# binfie-cookiecutter

./: .gitignore  CLAUDE.md  README.md  cookiecutter.json  requirements.txt
.github/workflows/: test_the_template.yml
hooks/: post_gen_project.sh  pre_gen_project.py  pre_gen_project.sh
tests/: conftest.py  test_generation.py
{{cookiecutter.__project_slug}}/: CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  Singularity.def  environment.yml  pixi.toml  pyproject.toml
{{cookiecutter.__project_slug}}/.github/workflows/: build_{{cookiecutter.__project_slug}}_docker.yml  test_{{cookiecutter.__project_slug}}.yml
{{cookiecutter.__project_slug}}/bioconda-recipes/recipes/{{cookiecutter.__project_slug}}/: meta.yaml
{{cookiecutter.__project_slug}}/docs/: index.rst  installation.rst  overview.rst
{{cookiecutter.__project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  cli.py
{{cookiecutter.__project_slug}}/{{cookiecutter.pkg_name}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE-INTERNATIONAL  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: test_{{cookiecutter.project_slug}}.yml
{{cookiecutter.project_slug}}/bioconda-recipes/recipes/{{cookiecutter.project_slug}}/: meta.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/.github/workflows/: test_{{cookiecutter.project_slug}}.yml  test_{{cookiecutter.project_stub}}.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
