[project]
name = "{{ cookiecutter.pkg_name }}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"},
]
description = "{{ cookiecutter.project_short_description }}"
readme = {file = "README.md", content-type="text/markdown"}
requires-python = ">=3.8"
keywords = ["{{ cookiecutter.__project_slug }}"]
classifiers = [
        'Natural Language :: English',
        'Programming Language :: Python :: 3.8',
]
dependencies = [
    {%- if cookiecutter.project_shell_cmd %}"Click",{% endif %}
    {%- if cookiecutter.wf_lang == 'WDL' %}"miniwdl",{% endif %}
    {%- if cookiecutter.wf_lang == 'CWL' %}"cwltool",{% endif %}
    {%- if cookiecutter.wf_lang == 'Snakemake' %}"snakemake",{% endif %}
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.__project_slug}}"
Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.__project_slug}}/issues"
Documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.__project_slug}}/docs"


{%- if cookiecutter.project_shell_cmd %}
[project.scripts]
{{ cookiecutter.project_shell_cmd }} = "{{ cookiecutter.__project_slug }}.cli:cli"
{% endif %}


[project.optional-dependencies]
test = [
    'pytest',
    'pytest-runner',
    'hypothesis',
    ]
dev = [
    'configparser',
    'black',
    'flake8',
    'sphinx',
    'twine',
    'coverage',
    'zest.releaser',
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]