[project]
name = "{{ cookiecutter.pkg_name }}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"},
]
description = "{{ cookiecutter.project_short_description }}"
readme = {file = "README.md", content-type="text/markdown"}
requires-python = ">=3.11"
keywords = ["{{ cookiecutter.__project_slug }}"]
classifiers = [
        'Natural Language :: English',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
]
dependencies = [
    {%- if cookiecutter.project_shell_cmd %}"click",{% endif %}
    {%- if cookiecutter.wf_lang == 'WDL' %}"miniwdl",{% endif %}
    {%- if cookiecutter.wf_lang == 'CWL' %}"cwltool",{% endif %}
    {%- if cookiecutter.wf_lang == 'Snakemake' %}"snakemake",{% endif %}
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.__project_slug}}"
Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.__project_slug}}/issues"
Documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.__project_slug}}"


{%- if cookiecutter.project_shell_cmd %}
[project.scripts]
{{ cookiecutter.project_shell_cmd }} = "{{ cookiecutter.pkg_name }}.cli:cli"
{% endif %}


[project.optional-dependencies]
test = [
    'pytest',
    'hypothesis',
    ]
dev = [
    'ruff',
    'sphinx',
    'twine',
    'coverage',
    'zest.releaser',
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]