[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md, LICENSE, LICENSE-INTERNATIONAL
license = {{ cookiecutter.open_source_license }}
license_files = file: LICENSE, LICENSE-INTERNATIONAL
classifiers = 
    Programming Language :: Python :: 3
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}.git
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}

[options]
package_dir = {{ cookiecutter.project_slug }}
packages = find:
install_requires =
    {%- if cookiecutter.project_shell_cmd %}Click ~= 8.1.3{%- endif %}
    python_version > "3.7"
test_suite = tests


[options.packages.find]
where = {{ cookiecutter.project_slug }}
exclude = 
    docs*
    {{cookiecutter.project_slug}}.tests*

{%- if cookiecutter.project_shell_cmd %}
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_shell_cmd }} = {{ cookiecutter.project_slug }}.cli:cli
{% endif %}

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
dev = 
    configparser
    pytest
    hypothesis
    black
    flake8
    sphinx
    tox
    twine
    coverage
    zest.releaser
test =
    {%- if cookiecutter.use_pytest == 'y' %}pytest
    pytest-runner
    {%- endif %}

